<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.ezeqlabs.selltimer.CadastroContatoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/data_contato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_data"
                android:layout_marginBottom="16dp"
                android:inputType="none"
                android:textIsSelectable="true"
                android:onClick="abreDatepicker"
                />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <Spinner
                android:id="@+id/interesse_contato"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/label_interesse"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_info"
                android:onClick="abreAjudaInteresse"
                />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/descricao_contato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_descricao"
                android:layout_marginBottom="16dp"
                android:inputType="textAutoCorrect|textLongMessage|textMultiLine"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</ScrollView>
