<resources>
    <string name="app_name">SellTimer</string>
    <string name="ezeqlabs">EzeqLabs</string>
    <string name="app_admob_id">ca-app-pub-8736689435854328~9035088790</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="ok">OK</string>
    <string name="entendi">Entendi</string>
    <string name="ajuda">Ajuda</string>
    <string name="tentar_novamente">Tentar novamente</string>
    <string name="title_alert_permissao_negada">Permissão negada</string>
    <string name="completar_acao_usando">Completar ação usando:</string>

    <!-- MENUS -->
    <string name="title_clientes_sidemenu">Clientes</string>
    <string name="ver_clientes_sidemenu">Ver clientes</string>
    <string name="novo_cliente_sidemenu">Novo cliente</string>

    <string name="title_contatos_sidemenu">Contatos</string>
    <string name="ver_contatos_sidemenu">Ver contatos</string>
    <string name="novo_contato_sidemenu">Novo contato</string>

    <string name="sobre_sidemenu">Sobre</string>

    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Fechar navigation drawer</string>

    <string name="action_settings">Configurações</string>
    <string name="action_salvar">Salvar</string>
    <string name="action_editar">Editar</string>
    <string name="action_deletar">Deletar</string>

    <!-- MAIN ACTIVITY -->
    <string name="tab_hoje">Hoje</string>
    <string name="tab_semana">Semana</string>
    <string name="tab_mes">Mês</string>
    <string name="contatos_hoje">Clientes para ligar hoje</string>
    <string name="contatos_semana">Clientes para ligar essa semana</string>
    <string name="contatos_mes">Clientes para ligar esse mês</string>
    <string name="texto_sem_contatos_hoje">Você não tem nenhum cliente para ligar hoje</string>
    <string name="texto_sem_contatos_semana">Você não tem nenhum cliente para ligar essa semana</string>
    <string name="texto_sem_contatos_mes">Você não tem nenhum cliente para ligar esse mês</string>
    <string name="title_boas_vindas">Bem vindo ao SellTimer</string>
    <string name="mensagem_boas_vindas">Cadastre seus clientes e os contatos realizados com eles. Te ajudaremos a não perder mais nenhuma venda.</string>

    <!-- CLIENTES ACTIVITY -->
    <string name="title_activity_clientes">Clientes</string>
    <string name="texto_sem_clientes">Você ainda não tem nenhum cliente cadastrado</string>

    <!-- CADASTRO CLIENTES ACTIVITY -->
    <string name="title_activity_cadastro_clientes">Cadastro de Cliente</string>
    <string name="label_nome">Nome</string>
    <string name="label_endereco">Endereço</string>
    <string name="novo_endereco"><u>+ Adicionar endereço</u></string>
    <string name="label_telefone">Telefone</string>
    <string name="novo_telefone"><u>+ Adicionar telefone</u></string>
    <string name="label_email">E-mail</string>
    <string name="novo_email"><u>+ Adicionar e-mail</u></string>
    <string name="cliente_salvo_sucesso">Cliente salvo com sucesso</string>
    <string name="cliente_atualizado_sucesso">Cliente atualizado com sucesso</string>
    <string name="erro_nome">Insira o nome do cliente</string>
    <string name="erro_nome_invalido">Insira um nome válido</string>
    <string name="erro_endereco_invalido">Insira um endereço válido</string>
    <string name="erro_telefone_invalido">Insira um telefone válido</string>
    <string name="erro_email_invalido">Insira um e-mail válido</string>
    <string name="banner_ad_cadastro_cliente">ca-app-pub-8736689435854328/7778681597</string>

    <!-- CADASTRO CONTATO ACTIVITY -->
    <string name="title_activity_cadastro_contato">Cadastro de contato</string>
    <string name="label_data">Data do contato</string>
    <string name="label_descricao">Descrição do contato</string>
    <string name="label_interesse">Selecione o nível de interesse</string>
    <string name="contato_salvo_sucesso">Contato salvo com sucesso</string>
    <string name="contato_atualizado_sucesso">Contato atualizado com sucesso</string>
    <string name="erro_data">Insira a data do contato</string>
    <string name="erro_data_invalida">Insira uma data válida</string>
    <string name="erro_interesse">Escolha o nível de interesse</string>
    <string name="banner_ad_cadastro_contato">ca-app-pub-8736689435854328/3208881196</string>
    <string name="erro_atualizar_contato">Erro ao atualizar contato. Tente novamente</string>
    <string name="mensagem_ajuda_interesse">Te avisaremos para retornar para o cliente, baseado na data deste contato. Avisaremos dentro de 3, 10 ou 25 dias, dependendo do nível de interesse que for escolhido.</string>

    <!-- DETALHE CLIENTE ACTIVITY -->
    <string name="title_activity_detalhe_cliente">Detalhe do cliente</string>
    <string name="telefones_detalhe_cliente">Telefones:</string>
    <string name="enderecos_detalhe_cliente">Endereços:</string>
    <string name="emails_detalhe_cliente">E-mails:</string>
    <string name="contatos_detalhe_cliente">Contatos:</string>
    <string name="btn_adicionar_contato">Adicionar</string>
    <string name="banner_ad_cliente">ca-app-pub-8736689435854328/5942021597</string>
    <string name="title_alert_deleta_cliente">Excluindo cliente</string>
    <string name="texto_alert_deleta_cliente">Realmente deseja excluir este cliente e todas suas informações?</string>
    <string name="cliente_deletado_sucesso">Cliente deletado com sucesso</string>
    <string name="texto_sem_contatos_detalhe">Você ainda não fez contato com esse cliente</string>
    <string name="texto_alert_permissao_telefone_negada">Sem a sua permissão, não poderemos realizar ligações para seus clientes</string>

    <!-- DETALHE CONTATO ACTIVITY -->
    <string name="title_activity_detalhe_contato">Detalhe do contato</string>
    <string name="data_detalhe_contato">Data do contato:</string>
    <string name="interesse_detalhe_contato">Nível de interesse:</string>
    <string name="descricao_detalhe_contato">Descrição do contato:</string>
    <string name="informacoes_detalhe_contato">Informações do contato:</string>
    <string name="banner_ad_contato">ca-app-pub-8736689435854328/8895487994</string>
    <string name="title_alert_deleta_contato">Excluindo contato</string>
    <string name="texto_alert_deleta_contato">Realmente deseja excluir este contato?</string>
    <string name="contato_deletado_sucesso">Contato deletado com sucesso</string>

    <!-- SOBRE ACTIVITY -->
    <string name="title_activity_sobre">Sobre o SellTimer</string>
    <string name="sobre_app">Sobre o aplicativo</string>
    <string name="versao_sobre_app">Você está na versão</string>
    <string name="desenvolvido_sobre_app">Desenvolvido por</string>
    <string name="feedback_sobre_app">Dúvidas, sugestões ou críticas?</string>
    <string name="lbl_titulo_feedback">Assunto</string>
    <string name="lbl_tipo_feedback">Escolha o tipo de opinião</string>
    <string name="lbl_descricao_feedback">Conte-nos sua opinião</string>
    <string name="enviar_dialog_feedback">Enviar</string>
    <string name="cancelar_dialog_feedback">Cancelar</string>
    <string name="assunto_email_feedback">[SellTimer - %1$s] %2$s</string>
    <string name="titulo_chooser_feedback">Enviar %1$s usando:</string>
    <string name="erro_chooser_feedback">Nenhum aplicativo de envio de e-mail encontrado</string>
    <string name="texto_sobre_app">Cadastre seus clientes e todos os contatos realizados com eles. Todo dia que tiver algum cliente para ligar, vamos te lembrar para você não perder mais nenhuma venda.</string>

    <!-- NOTIFICACOES -->
    <string name="titulo_notificacao">Não perca mais nenhuma venda</string>
    <string name="texto_notificacao">Acesse o SellTimer e veja os clientes que você tem para ligar hoje</string>

</resources>
