<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.ezeqlabs.selltimer.CadastroContatoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/titulo_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_titulo_feedback"
                android:layout_marginBottom="16dp"
                android:inputType="text|textAutoCorrect"
                />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/tipo_feedback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:prompt="@string/lbl_tipo_feedback"
            android:entries="@array/tipos_de_feedback"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/descricao_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_descricao_feedback"
                android:layout_marginBottom="16dp"
                android:inputType="textAutoCorrect|textLongMessage|textMultiLine"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</ScrollView>
