<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.ezeqlabs.selltimer.SobreActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >
        
        <TextView
            style="@style/TituloCliente"
            android:text="@string/app_name"
            />

        <TextView
            style="@style/TituloInformacao"
            android:text="@string/title_activity_sobre" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/texto_sobre_app"
            />
        
        <TextView
            style="@style/TituloInformacao"
            android:text="@string/versao_sobre_app" />

        <TextView
            android:id="@+id/txtVersao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            />

        <TextView
            style="@style/TituloInformacao"
            android:text="@string/desenvolvido_sobre_app" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ezeqlabs"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            />

        <Button
            android:id="@+id/btnFeedback"
            style="@style/TituloInformacao"
            android:text="@string/feedback_sobre_app"
            android:gravity="center"
            android:onClick="enviarFeedback"
            />
        
    </LinearLayout>

</ScrollView>
